# otusalg-hw06

./: .gitignore  1.py  CMakeLists.txt  README.md  generators.h  heap.h  main.cpp  mergesort.h  oa_sort.h  quicksort.h  timsort.py
